--- a/aceEditor/package.json
+++ b/aceEditor/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "big.js": "^5.2.2",
+    "brace": "^0.11.1",
     "classnames": "^2.2.6",
     "react-ace": "^8.0.0"
   }
