Converting all functions to arrow functions, fixing project name bug causing 404 on cloud deployments, adding 1.0.2 MPK release file, updating README

--- a/aceEditor/src/package.xml
+++ b/aceEditor/src/package.xml
@@ -5,7 +5,7 @@
             <widgetFile path="AceEditor.xml"/>
         </widgetFiles>
         <files>
-            <file path="scottiexxx/aceeditor"/>
+            <file path="scottiexxx/aceeditor/"/>
         </files>
     </clientModule>
 </package>
